<resources>
    <string name="app_name">The Wonder App</string>
    <string name="Logout">Logout</string>
    <string name="Edit">Edit Postings</string>
    <string name="YourPosts">Your Posts</string>
    <string name="title_activity_new_post">NewPost</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="newPost">New Post</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for item details for post -->
    <string name="itemContactNumber">Contact Number</string>
    <string name="itemDescription">Description</string>
    <string name="itemPrice">Price</string>
    <string name="submitNewPost">Submit</string>
    <string name="itemTitle">Title</string>
    <string name="email">Email</string>
    <string name="desc">Desc</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="email_seller">Email seller</string>
    <string name="search">Search posts</string>
</resources>
